<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textCapSentences"
                android:maxLength="100"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_amount"
                android:inputType="number"
                android:maxLength="9"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"
                android:maxLength="15"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end">

        <Button
            android:id="@+id/cancel_button"
            android:theme="@style/NeutralButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/create_button"
            android:theme="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"/>

        <Button
            android:id="@+id/save_button"
            android:theme="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>

</FrameLayout>
